# atdd-v2-destop

qt/: CMakeLists.txt
